--- a/css/main.css
+++ b/css/main.css
@@ -7539,6 +7539,18 @@ textarea.form-control-lg {
   font-size: 1.5rem;
   font-weight: 500; }
 
+.carousel-caption {
+  transform: translateY(-50%);
+  bottom: initial;
+  top: 50%; }
+
+.carousel-caption__text {
+  font-size: 2.5rem;
+  font-weight: 600; }
+
+.carousel__image {
+  filter: brightness(80%); }
+
 .footer {
   background: #396A53; }
 
