--- a/scss/_customSASS.scss
+++ b/scss/_customSASS.scss
@@ -47,24 +47,6 @@
         font-weight: 500;
     }
 
-//CAROUSEL
-
-    //CAPTION
-    .carousel-caption {
-        transform: translateY(-50%);
-        bottom: initial;
-        top: 50%;
-    }
-    //TEXT
-    .carousel-caption__text {
-        font-size: 2.5rem;
-        font-weight: 600;
-    }
-    //IMAGE
-    .carousel__image {
-        filter: brightness(80%);
-    }
-
 //FOOTER
 
     .footer{
@@ -87,6 +69,25 @@
     }
 
 //INDEX PAGE
+
+
+    //CAROUSEL
+
+        //CAPTION
+        .carousel-caption {
+            transform: translateY(-50%);
+            bottom: initial;
+            top: 50%;
+        }
+        //TEXT
+        .carousel-caption__text {
+            font-size: 2.5rem;
+            font-weight: 600;
+        }
+        //IMAGE
+        .carousel__image {
+            filter: brightness(80%);
+        }
 
     //BUYING INFORMATION
 
@@ -141,6 +142,11 @@
                 font-weight: 600;
             }
         }
+        //IMAGE
+        .category__image {
+            filter: brightness(80%);
+        }
+
 
 // ONLINE SHOP
 
