--- a/scss/_customSASS.scss
+++ b/scss/_customSASS.scss
@@ -87,6 +87,8 @@
         //IMAGE
         .carousel__image {
             filter: brightness(80%);
+            height: 23.438rem;
+            object-fit: cover;
         }
 
     //BUYING INFORMATION
