--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,7 @@
     scroll-behavior: smooth; } }
 
 body {
+  height: -webkit-fill-available;
   margin: 0;
   font-family: var(--bs-font-sans-serif);
   font-size: 1rem;
